--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -19,10 +19,10 @@
   flex-direction: row;
   justify-content: center;
   align-content: center;
-  white-space: pre;
+  white-space: pre !important;
 }
 #logo {
-  white-space: pre;
+  white-space: pre !important;
 }
 #logo:hover {
   color: #111;
@@ -31,10 +31,10 @@
 
 
 div > pre {
-    white-space: no-wrap;
+    white-space: no-wrap !important;
   }
 div > pre > code {
-    white-space: pre;
+    white-space: pre !important;
   }
 
 @media only screen and (max-width: 650px), only screen and (max-height: 800px) {
