--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -12,8 +12,8 @@
   /* z-index: 999; */
   position: fixed;
   margin-top: 9.5rem;
-}
 
+}
 .logo-wrap {
   display: flex;
   flex-direction: row;
@@ -36,6 +36,33 @@ div > pre {
 div > pre > code {
     white-space: pre !important;
   }
+  div > pre > pre {
+    display: inline-block;
+    position: relative;
+    margin-top: -9rem;
+  }
+
+  #n {
+  top: 10rem;
+  right: 1rem;
+  }
+
+  #t {
+  right: 0.5rem;
+  }
+
+  #h {
+  top: 1.6rem;
+  right: 0.5rem;
+  }
+
+  #i {
+  right: 0.5rem;
+  }
+  #s {
+    top: 1.5rem;
+    right: 4.5rem;
+  }
 
 @media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
@@ -44,6 +71,39 @@ div > pre > code {
     font-size: 0.7rem;
     line-height: 0.9rem;
   }
+
+  #n {
+  right: 0.5rem;
+  }
+
+  #a {
+    top: 4rem;
+  }
+
+  #a2 {
+    top: 4rem;
+  }
+
+  #t {
+  top: 4rem;
+  right: 0.5rem;
+  }
+
+  #h {
+  top: 4.8rem;
+  right: 0.5rem;
+  }
+
+  #i {
+  top: 4rem;
+  right: 0.5rem;
+  }
+
+  #s {
+    top: 4.8rem;
+    right: 2.3rem;
+  }
+
 }
 
 @media only screen and (max-width: 400px), only screen and (max-height: 600px) {
@@ -52,6 +112,39 @@ div > pre > code {
     margin-top: 2rem;
     font-size: 0.6rem;
     line-height: 0.7rem;
+  }
+
+  #n {
+  right: 1rem;
+  left: -0.5rem;
+  }
+
+  #a {
+    top: 5.5rem;
+  }
+
+  #a2 {
+    top: 5.5rem;
+  }
+
+  #t {
+    top: 5.5rem;
+  right: 0.5rem;
+  }
+
+  #h {
+  top: 6.3rem;
+  right: 0.5rem;
+  }
+
+  #i {
+  top: 5.5rem;
+  right: 0.5rem;
+  }
+
+  #s {
+    top: 6.3rem;
+    right: 1.8rem;
   }
 }
 
@@ -62,4 +155,39 @@ div > pre > code {
     font-size: 0.4rem;
     line-height: 0.4rem;
   }
+
+  #n {
+  top: 6rem;
+  right: 1rem;
+  }
+
+  #a {
+    top: 4rem;
+  }
+
+  #t {
+  top: 4rem;
+  right: 0.0rem;
+  }
+
+  #h {
+  top: 4.4rem;
+  right: 0.0rem;
+  }
+
+  #i {
+  top: 4rem;
+  right: 0.0rem;
+  }
+
+  #a2 {
+  top: 4rem;
+  left: 0.2rem;
+  }
+
+  #s {
+    top: 4.5rem;
+    right: 1.0rem;
+  }
+
 }
