--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -10,7 +10,8 @@
 
 nav > ul {
   position: fixed;
-  margin-top: 26.7rem;
+  margin-top: 27.7rem;
+  margin-right: 4rem;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -54,11 +55,11 @@ nav > ul > li:hover {
   animation: glitch 4s steps(100) 1, blinker 1.5s linear 6;
 }
 
-
 @media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
     nav > ul {
-      margin-top: 17.0rem;
+      margin-top: 17.3rem;
+      margin-right: 2.3rem;
     }
 
     nav > ul > li {
@@ -69,21 +70,34 @@ nav > ul > li:hover {
 @media only screen and (max-width: 400px), only screen and (max-height: 600px) {
 
     nav > ul {
-      margin-top: 9.1rem;
+      margin-top: 9.8rem;
+      margin-right: 2rem;
     }
 
     nav > ul > li {
       font-size: 1.3rem;
     }
+.main-nav > ul > li:before,
+.main-nav > ul > li > :not(.active):before,
+.main-nav > ul > li > .active:before {
+  padding: 0.3rem;
+}
 }
 
 @media only screen and (max-width: 350px), only screen and (max-height: 470px) {
 
     nav > ul {
       margin-top: 5.5rem;
+      margin-right: 3rem;
     }
 
     nav > ul > li {
       font-size: 0.85rem;
     }
+
+.main-nav > ul > li:before,
+.main-nav > ul > li > :not(.active):before,
+.main-nav > ul > li > .active:before {
+  padding: 0.3rem;
+}
 }
