--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -42,27 +42,6 @@ div > pre > code {
     margin-top: -9rem;
   }
 
-  #n {
-  top: 10rem;
-  right: 1rem;
-  }
-
-  #t {
-  right: 0.5rem;
-  }
-
-  #h {
-  top: 1.6rem;
-  right: 0.5rem;
-  }
-
-  #i {
-  right: 0.5rem;
-  }
-  #s {
-    top: 1.5rem;
-    right: 4.5rem;
-  }
 
 @media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
@@ -71,39 +50,6 @@ div > pre > code {
     font-size: 0.7rem;
     line-height: 0.9rem;
   }
-
-  #n {
-  right: 0.5rem;
-  }
-
-  #a {
-    top: 4rem;
-  }
-
-  #a2 {
-    top: 4rem;
-  }
-
-  #t {
-  top: 4rem;
-  right: 0.5rem;
-  }
-
-  #h {
-  top: 4.8rem;
-  right: 0.5rem;
-  }
-
-  #i {
-  top: 4rem;
-  right: 0.5rem;
-  }
-
-  #s {
-    top: 4.8rem;
-    right: 2.3rem;
-  }
-
 }
 
 @media only screen and (max-width: 400px), only screen and (max-height: 600px) {
@@ -112,39 +58,6 @@ div > pre > code {
     margin-top: 2rem;
     font-size: 0.6rem;
     line-height: 0.7rem;
-  }
-
-  #n {
-  right: 1rem;
-  left: -0.5rem;
-  }
-
-  #a {
-    top: 5.5rem;
-  }
-
-  #a2 {
-    top: 5.5rem;
-  }
-
-  #t {
-    top: 5.5rem;
-  right: 0.5rem;
-  }
-
-  #h {
-  top: 6.3rem;
-  right: 0.5rem;
-  }
-
-  #i {
-  top: 5.5rem;
-  right: 0.5rem;
-  }
-
-  #s {
-    top: 6.3rem;
-    right: 1.8rem;
   }
 }
 
@@ -156,38 +69,11 @@ div > pre > code {
     line-height: 0.45rem;
   }
 
-  #n {
-  top: 6rem;
-  right: 1rem;
-  }
 
-  #a {
-    top: 4rem;
-  }
+}
 
-  #t {
-  top: 4rem;
-  right: 0.0rem;
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  #logo {
+    line-height: 1.7rem;
   }
-
-  #h {
-  top: 4.4rem;
-  right: 0.0rem;
-  }
-
-  #i {
-  top: 4rem;
-  right: 0.0rem;
-  }
-
-  #a2 {
-  top: 4rem;
-  left: 0.2rem;
-  }
-
-  #s {
-    top: 4.5rem;
-    right: 1.0rem;
-  }
-
 }
