--- a/src/Id/Work/Code/Code.css
+++ b/src/Id/Work/Code/Code.css
@@ -1,3 +1,5 @@
+@import url('https://adobe-fonts.github.io/source-code-pro/source-code-pro.css');
+
 .code {
   display: flex;
   justify-content: center;
@@ -16,13 +18,11 @@
   display: block;
 }
 
+
 .code > ul > li > a:hover {
   animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
 }
 
-.li-decoration {
-  display: block;
-}
 
 .loading {
   display: inline;
@@ -34,7 +34,6 @@
 }
 
 .code > ul > li {
-  overflow: hidden;
 
   max-width: 23rem;
   min-width: 23rem;
@@ -46,13 +45,18 @@
 
   pointer-events: auto;
   cursor: pointer;
-  height: 0.959rem;
+  /* height: 0.959rem; */
 
   display: inline-block;
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis-word;
   -webkit-text-stroke: 0.1px #313131;
+}
+
+.li-decoration {
+  display: block;
+  font-family: "Source Code Pro";
+  overflow: auto !important;
 }
 
 @media only screen and (max-width: 650px), only screen and (max-height: 800px) {
@@ -66,11 +70,16 @@
   .code > ul > li > a {
     font-size: 0.7rem;
   }
+
+  .code > ul > li {
+    font-size: 0.7rem;
+  }
+
 }
 
 @media only screen and (max-width: 350px), only screen and (max-height: 470px) {
 
-  .code > ul > li > a {
-    font-size: 0.6rem;
-  }
+  /* .code > ul > li > a { */
+  /*   font-size: 0.6rem; */
+  /* } */
 }
