--- a/src/Id/Work/Philosophy/Philosophy.css
+++ b/src/Id/Work/Philosophy/Philosophy.css
@@ -1,3 +1,5 @@
+@import url('https://adobe-fonts.github.io/source-code-pro/source-code-pro.css');
+
 .philosophy {
   display: flex;
   justify-content: center;
@@ -15,6 +17,7 @@
 
 .philosophy > ul {
   padding-left: 10rem;
+  display: block;
 
 }
 
@@ -25,12 +28,13 @@
   max-width: 23rem;
   min-width: 23rem;
   text-overflow: ellipsis-word;
-  height: 1.1rem;
+  /* height: 1.1rem; */
+  display: block;
+  font-family: "Source Code Pro"
 }
 .philosophy > ul > li > a {
   pointer-events: auto;
   cursor: pointer;
-
 }
 
 .philosophy > ul > li > a:hover {
@@ -52,14 +56,23 @@
     margin-bottom: 0.65rem;
     font-size: 0.4rem;
   }
+  .philosophy > h2 {
+    margin-left: 3.2rem;
+    margin-bottom: 1.15rem;
+    font-size: 0.4rem;
+  }
   .philosophy > ul > li > a {
     font-size: 0.7rem;
   }
+  .philosophy > ul > li {
+    font-size: 0.7rem;
+  }
+
 }
 
 @media only screen and (max-width: 350px), only screen and (max-height: 470px) {
 
-  .philosophy > ul > li > a {
-    font-size: 0.6rem;
-  }
+  /* .philosophy > ul > li > a { */
+  /*   font-size: 0.6rem; */
+  /* } */
 }
