--- a/src/Id/Work/Philosophy/Philosophy.css
+++ b/src/Id/Work/Philosophy/Philosophy.css
@@ -72,7 +72,8 @@
 
 @media only screen and (max-width: 350px), only screen and (max-height: 470px) {
 
-  /* .philosophy > ul > li > a { */
-  /*   font-size: 0.6rem; */
-  /* } */
+.philosophy > ul > li {
+  max-width: 9.5rem;
+  min-width: 9.5rem;
+}
 }
